--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <p class="result"></p>
             <p class="your-score">Sua pontuação: <span id="your-score">0</span></p>
             <p class="machine-score">Pontuação do adversário: <span id="machine-score">0</span></p>
+
+            <img src="./assets/logo_k-removebg-preview.png" alt="krauspenhar-logo">
         </div>
     </div>
 
